Fix splash signup login button misalignment

--- a/app/assets/stylesheets/components/_splash_content.scss
+++ b/app/assets/stylesheets/components/_splash_content.scss
@@ -26,6 +26,10 @@ $h1-navy: #333646;
   width: 130px;
 }
 
+.signup-login {
+  display: flex;
+}
+
 .get-started-button, .guest-login-button {
   border: 1px solid gray;
   border-radius: 4px;
